WIU - ver-NSS'ed

--- a/Saksenoorlogen.mw
+++ b/Saksenoorlogen.mw
@@ -1,12 +1,12 @@
-[[Ofbeelding:Zerstörung der Irminsaule durch Karl den Großen by Heinrich Leutemann.jpg|thumb|200px|right|Ofbeelding van de verwoosting van de Irminsul, wat anleaiding vuur de Saksenoorloogn was.]]
-De '''Saksenoorloogn''' ([[772]] - [[804]]) zeent n antal oorloogn tusken t [[Fraanken|Fraankse]] Riek van [[Karel de Grote|Grootn Koarel]] en de [[Saksen (vôlk)|Saksen]]. 
+[[Ofbeelding:Zerstörung der Irminsaule durch Karl den Großen by Heinrich Leutemann.jpg|thumb|200px|right|Ofbeylding van de verwoosting van de Irminsul, wat anleiding was vöär de Saksenoorlogen.]]
+De '''Saksenoorlogen''' ([[772]] - [[804]]) sint een antal oorlogen tüsken et [[Fraanken|frankiske]] ryk van [[Karel de Grote|Groten Karel]] en de [[Saksen (vôlk)|saksen]]. 
 
-==Achtergroond==
-Fraankse keuningn hadn töt dee tied wal skatgeeld ekreegn van de Saksen, mer ze hadn de Saksen dr nooit oonder ekreegn. De Saksen heuldn doarbie nog aait vaste an [[Germaanse mythologie|Germaanse geleufsgebroekn]], leawn in lösse stamverbaandn en gungn regelmoatig hen reuwn op Fraankse groond. t Is neet dudelik of Koarel eerst allennig disse reuftochtn wol stopn, of det he meteen de Saksen dr oonder wol kriegn en dwingn um [[Christendom|Kristelik]] te wordn.
+==Achtergrund==
+Frankse köningen hadden töt dee tyd wal skatgelden kreygen van de saksen, mär se hadden se der nooit echt under kreygen. De saksen volgeden dårby noch altyd vaste an [[Germaanse mythologie|germaanske gelöyvsgebruken]], leyveden in lösse stamverbanden en güngen reygelmåtig up röyvtocht up frankiske grund. Et is nit düdelik of Karel eyrst enkel disse röyvtochten teagen wul gån of dat hee medeyne de sassen der under wul krygen en dwingen um [[Christendom|kristelik]] te worden.
 
-De [[Annales regni Francorum]] (Fraankse Rieksgeskiedenisse) en de [[Vita Karola Magni]] (leawnsbeskriewing van Grootn Koarel) beskriewt de Saksenoorloogn oetvoerig, mer dr zeent hoaste gin opgreawingn edoan. In disse geskriftn wörd oontvolking en vortvoring eneumd, mer dit is noargns zo dudelik te vernemn as bievuurbeeld bie de oontvolking van [[Noordalbingië]] ([[Ditmarsken]], [[Holsteen]] en [[Stormarn]]) en de invoring van de [[Slawiese volker|Slawiese]] [[Abrodietn]].
+De [[Annales regni Francorum]] (Frankiske Ryksgeskydenisse) en de [[Vita Karola Magni]] (leyvensbeskryving van Groten Karel) beskryvet de Saksenoorlogen uutvorig, mär der sint håste ginne upgravingen dån. In disse geskrivten wörd untvolking en vortvoring enöymet, mär dit is nargens so düdelik te seen as by de untvolking van [[Noordalbingië]] ([[Ditmarsken]], [[Holsteyn]] en [[Stormarn]]) en de invoring van de [[Slawiese volker|slaviske]] [[Abrodyten]].
 
-==Oorzaak en verloop==
+==Oorsaak en verloop==
 In 772 leut Grootn Koarel n [[Irminsul]] kapothouwn. De Irminsul was nen grootn stam, poal of stuk hoolt wat nen wearldboom mos vuursteln. Dissen wearldboom (irminsul beteeknt letterlik ''al-zoel'') stutn volgns de Germaann n hemmel en de earde (alns) en wör doarumme as belangrieke heailige plaatse vereard.<ref>''[[Annales Laureshamenses]]'', ad A. 772 (bij Pertz 1. 30) ("''Fuit rex Carlus hostiliter in Saxonia et destruxit fanum eorum, quod vocatur Irminsul.''"); ''[[Annales iuvavenses]]'', ad A. 772 (bie Pertz 1. 88) ("''Karolus idolum Saxonorum combussit, quod dicebant Irminsul.''").</ref> Ook wörd annömn det de plek woer't disse zoele steund ne belangrieke gadderplaatse was, woer't alle Saksen te hope kömn um t [[Ding (rechtsgeleardheid)|Deenk]] (rechtdag) te hooldn. t Kapothouwn van de Irminsul was dus meteen nen anslag op t Saksengeleuf en de Saksen-"regearing".
 
 Doarumme steukn de Saksen in [[Deawnter]] [[Leefwin]] zinne koarke in n braand. Det leut Koarel neet onbestraft. Hee treuk dr op an um de Saksen te bestrafn. In t zommer van det joar wun Koarel eerst: zin leager steuk de [[Rein]] oawer, t Saksiese gebeed in. Doar vereuwern he oonder mear de [[Hohensyborg|Syborg]] (bie [[Dortmund]]) en de [[Eresborg]]<ref>Daniel Bérenger: Die eisenzeitliche Höhenbefestigung von Obermarsberg [http://www.gefao.de/bilder/publikation/aio06-PDF/AiO6_S28-32.pdf Digitalisat]</ref> (bie [[Marsboarg]]), woer't n Irminsul estoan hebn zol. Van doaroet treuk he op de [[Wezer]] op an. Doar versleug he n Saksenleager. Öaren leaider, [[Hessi]], leut zik töt Kristn deupn. Op basis van dit sukses bespreuk Koarel zinne wietere plann met n antal walwilnde Saksiese edelmänne. n Antal doarvan zetn he vuur de zekerheaid wal gevangn. 
