--- a/Melle_Nieling.mw
+++ b/Melle_Nieling.mw
@@ -1,10 +1,14 @@
-[[Bestaand:Villa de Bank with work by Melle Nieling (MoMA).jpg|alt=Melle Nieling Villa de Bank|duum|Exposisie van Melle Nieling]]
-Melle Nieling (1992, Reurle) is een neaderlandse keunstener, up-ewassen in de Achterhook.
+[[Bestaand:Villa de Bank with work by Melle Nieling (MoMA).jpg|alt=Melle Nieling Villa de Bank|duum|Eksposity van Melle Nieling]]
+'''Melle Nieling''' ([[1992]], [[Reurle|Röörle]]) is een neaderlandske künstener, up-ewasken in de Achterhook.
 
-In 2017 is he geliek met z'n bruur cum laude af-estudeerd van e [[AKI Artez]] in [[Eanske|Enske]].<ref>De Jong, M. (29 juni 2017). Broederliefde als experiement. Tubantia: Enschede.</ref> E wodden bekend deurdat e bi'j [[Villa de Bank]] in Enske har exposeert in samenwerking met ''the Museum of Modern Art'' in [[Niej-York]].<ref>[https://artreview.eu/news/news_16_aug_2018_moma_to_start_new_collaborative_exhibition_project/ Art Review. (2018). MoMA to start new collaborative exhibition project.] </ref><ref>[https://villadebank.nl/exhibition/melle-june-nieling/ Villa de Bank. (2018). MoMA at the Bank Presents.]</ref>
+In 2017 is hee gelyk med syb bröör cum laude af-estudeerd van de [[AKI Artez]] in [[Eanske|Enske]].<ref>De Jong, M. (29 juni 2017). Broederliefde als experiement. Tubantia: Enschede.</ref> Hee wordden bekend döärdat hee by [[Villa de Bank]] in Enske har eksposeerd in samenwerking med ''the Museum of Modern Art'' in [[Niej-York|Ny-York]].<ref>[https://artreview.eu/news/news_16_aug_2018_moma_to_start_new_collaborative_exhibition_project/ Art Review. (2018). MoMA to start new collaborative exhibition project.] </ref><ref>[https://villadebank.nl/exhibition/melle-june-nieling/ Villa de Bank. (2018). MoMA at the Bank Presents.]</ref>
+
+== Uutgoande verwiezingen ==
+*[https://mellenieling.com Webstea van Melle Nieling]
 
 == Referensies ==
 <references />
 
-== Uutgoande verwiezingen ==
-[https://mellenieling.com Webstae van Melle Nieling]
+{{Dialekt|act}}
+
+[[Kategorie:Kunstenaar]]
