/* Oorsaak en verloop */  Ver-NSS-ed. WIU.

--- a/Saksenoorlogen.mw
+++ b/Saksenoorlogen.mw
@@ -7,19 +7,19 @@ Frankse köningen hadden töt dee tyd wal skatgelden kreygen van de saksen, mär
 De [[Annales regni Francorum]] (Frankiske Ryksgeskydenisse) en de [[Vita Karola Magni]] (leyvensbeskryving van Groten Karel) beskryvet de Saksenoorlogen uutvorig, mär der sint håste ginne upgravingen dån. In disse geskrivten wörd untvolking en vortvoring enöymet, mär dit is nargens so düdelik te seen as by de untvolking van [[Noordalbingië]] ([[Ditmarsken]], [[Holsteyn]] en [[Stormarn]]) en de invoring van de [[Slawiese volker|slaviske]] [[Abrodyten]].
 
 ==Oorsaak en verloop==
-In 772 leut Grootn Koarel n [[Irminsul]] kapothouwn. De Irminsul was nen grootn stam, poal of stuk hoolt wat nen wearldboom mos vuursteln. Dissen wearldboom (irminsul beteeknt letterlik ''al-zoel'') stutn volgns de Germaann n hemmel en de earde (alns) en wör doarumme as belangrieke heailige plaatse vereard.<ref>''[[Annales Laureshamenses]]'', ad A. 772 (bij Pertz 1. 30) ("''Fuit rex Carlus hostiliter in Saxonia et destruxit fanum eorum, quod vocatur Irminsul.''"); ''[[Annales iuvavenses]]'', ad A. 772 (bie Pertz 1. 88) ("''Karolus idolum Saxonorum combussit, quod dicebant Irminsul.''").</ref> Ook wörd annömn det de plek woer't disse zoele steund ne belangrieke gadderplaatse was, woer't alle Saksen te hope kömn um t [[Ding (rechtsgeleardheid)|Deenk]] (rechtdag) te hooldn. t Kapothouwn van de Irminsul was dus meteen nen anslag op t Saksengeleuf en de Saksen-"regearing".
+In 772 löyt Groten Kårel de [[Irminsul]]<nowiki/>e kapothauen. De Irminsule was nen groten stam, pål of stükke holt wat nen wearldboom vöärstellen mus. Dissen wearldboom (irminsule bedüdet letterlik ''sule van allens'') stütteden volgens de germanen den heamel en de earde (allens) en wör dårüm as vöärname heilige steyde anbeyden.<ref>''[[Annales Laureshamenses]]'', ad A. 772 (bij Pertz 1. 30) ("''Fuit rex Carlus hostiliter in Saxonia et destruxit fanum eorum, quod vocatur Irminsul.''"); ''[[Annales iuvavenses]]'', ad A. 772 (bie Pertz 1. 88) ("''Karolus idolum Saxonorum combussit, quod dicebant Irminsul.''").</ref> Ook wörd annöämen dat de steyde wår as disse sule stünd ne belangryke gadderplaatse was, wår as alle saksen te hope köämen üm et [[Ding (rechtsgeleardheid)|Ding]] (rechtdag) te holden. Et kapothauen van de Irminsule was düs medeyne nen anslag up et saksengelöyv en de saksen-"regeyring".
 
-Doarumme steukn de Saksen in [[Deawnter]] [[Leefwin]] zinne koarke in n braand. Det leut Koarel neet onbestraft. Hee treuk dr op an um de Saksen te bestrafn. In t zommer van det joar wun Koarel eerst: zin leager steuk de [[Rein]] oawer, t Saksiese gebeed in. Doar vereuwern he oonder mear de [[Hohensyborg|Syborg]] (bie [[Dortmund]]) en de [[Eresborg]]<ref>Daniel Bérenger: Die eisenzeitliche Höhenbefestigung von Obermarsberg [http://www.gefao.de/bilder/publikation/aio06-PDF/AiO6_S28-32.pdf Digitalisat]</ref> (bie [[Marsboarg]]), woer't n Irminsul estoan hebn zol. Van doaroet treuk he op de [[Wezer]] op an. Doar versleug he n Saksenleager. Öaren leaider, [[Hessi]], leut zik töt Kristn deupn. Op basis van dit sukses bespreuk Koarel zinne wietere plann met n antal walwilnde Saksiese edelmänne. n Antal doarvan zetn he vuur de zekerheaid wal gevangn. 
+Dårüm stöyken de saksen in [[Deawnter|Deaventer]] [[Leefwin|Leevwin]] syne karke in 'n brand. Dat löyt Karel neet unbestraffed. Hee tröyk der up an üm de saksen te bestraffen. In et soamer van dat jår wün Karel eyrst: syn leyger stöyk de [[Rien|Ryn]] oaver, et saksiske gebeed in. Dår veröyvereden he under meyr de [[Hohensyborg|Syborg]] (by [[Dortmund]]) en de [[Eresborg]]<ref>Daniel Bérenger: Die eisenzeitliche Höhenbefestigung von Obermarsberg [http://www.gefao.de/bilder/publikation/aio06-PDF/AiO6_S28-32.pdf Digitalisat]</ref> (by [[Marsboarg|Marsbarg]]), wår as de Irminsule estån hebben sul. Van dåruut tröyk hee up de [[Wezer|Weser]] up an. Dår verslöyg he een saksenleyger. Öären leider, [[Hessi]], löyt sik töt Kristen döypen. Up basis van dit sukces bespröyk Karel syne wydtere plannen med een paar goodwillende saksiske edelmänne. Een antal dårvan setten he vöär de seykerheid wal gevangen. 
 
-In [[773]] gung Koarel noar [[Italië]], woer't keuning [[Desiderius van de Longobardn]] de zöns van zinnen oawerleednen breur [[Carloman I]] in hoes har. De Saksen gungn oonder n [[Westfalen|Westfaalsen]] leaider [[Wittekeend]] verdan met vechtn en wunn Deawnter, n antal Fraankse nearzettingn en koarkn, vuural in t hudige [[Duutslaand|Duutse]] [[Reinlaand (Duutslaand)|Reinlaand]]. Oonderwiel völn de [[Engern (volk)|Engern]], n Saksies volk wat roond t hudige [[Breemn]] woonn, t pleatske [[Fritzlar]] an. Dee wördn duur de Fraankn versloan.
+In [[773]] güng Karel når [[Italië|Italye]], wår as köning [[Desiderius van de Longobardn|Desiderius van de Longobarden]] de söäns van synen oaverleydenen bröyr [[Carloman I]] in huus har. Under 'n [[Westfalen|westfaalsken]] leider [[Wittekeend|Wittekind]] güngen de saksen vöärt-an med vechten en wunnen Deaventer, een paar frankiske dörpkes en karken, vöäral in et hüdigendaagse [[Duutslaand|düütske]] [[Reinlaand (Duutslaand)|Rynland]]. Underwyl völlen de [[Engern (volk)|Engeren]], een saksisk volk wat rund et hüdige [[Breemn|Bremen]] woaneden, et steydke [[Fritzlar]] an. Dee wörden döar de franken verslån.
 
-In [[775]] köm Koarel met n leager via Syborg, Eresborg en Brunsboarg (bie [[Höxter (stad)|Höxter]]) bie de rivier de [[Oker (rivier)|Oker]], woer't n deel van de Saksen doar zik oawergavn. Op de terugweg gung Koarel met zin leager langs [[Hildesheim (stad)|Hildesheim]] en [[Nordstemmen]] noar de Bukkigouw roond Bukkeborg. Hier heuldn de Engern n antal Fraankn in gevangskop. Van doar oet treuk Koarel noar "Hlitbeki" ([[Lubeek|Lubekke]]) um zin leager doar te helpn. 
+In [[775]] köäm Karel met een leyger oaver Syborg, Eresborg en Brunsbarg (by [[Höxter (stad)|Höxter]]) by 'n rivyr 'n Oker, wår as een deyl van de saksen sik ewünnen gavven. Up de weg wearümme güng Karel med syn leyger langs [[Hildesheim (stad)|Hildesheym]] en [[Nordstemmen]] når de Bukkigouw rund Bukkeborg. Hyr hölden de engeren een antal franken in gevangenskap. Van dår uut tröyk Karel når "Hlitbeki" ([[Lubeek|Lübeake]]) üm syn leyger dår te helpen. 
 
-Noa wier ne veeldtocht in Italië in [[776]] köm Koarel wier noar t Saksies gebeed, want de Saksen hadn oonderwiel zinnen Eresborg kort ehöwn. Hee versleug ze en Wittekeend mos vluchtn noar [[Deanemoarken]].
+Nå wear ne veldtocht in Italye in [[776]] köäm Karel wearümme når et sassiske gebeed, want de saksen hadden underwyl synen eresborg kort-höwwen. Hee verslöyg se, wårup Wittekind vlïchten mus når [[Deanemoarken|Deynemarken]].
 
-In [[777]] wör vuur t eerst in langen tied neet evöchtn. In dit joar was dr vuur t eerst ne Fraankse vergoaring op Saksiese groond. Dit was de vuurloper van de [[Rieksdag (Heilige Roomse Riek)|rieksdag]] en wör in t net estichte ''[[Karlsborg (Vorpommern)|Karlsborg]]'' eheuldn. Dr wörd emeand at dit was bie t nondeagse [[Paderborn (stad)|Paderborn]]. Dr wör hier bekuierd det de Saksen rap kerstend wordn mosn. Hiervuur haaln ze [[Angelsassen|Angelsaksiese]] zeandelingn oet [[Engelaand]]. Grootn Koarel wol gearnde det de koarkn en [[klooster]]s met öare [[bookhoolding]]sgebroekn alns in de gaatn heuldn.
+In [[777]] wör vöär et eyrst in lange tyd nit evöchten. In dit jår was der vöär et eyrst ouk ne frankiske vergådering up sassisken grund, in de net estichtede ''[[Karlsborg]]''. Dit was 'n vöärloper van de [[Rieksdag (Heilige Roomse Riek)|ryksdag]]. Der wörd emeyned dat dit was by et nudaagse [[Paderborn (stad)|Paderborn]]. Uutkumst van de beköyerye was dat de saksen mär rap kerstened worden mussen. Hyrvöär nöydigeden se [[Angelsassen|angelsassiske]] sendelingen uut [[Engelaand|Engeland]]. Groten Karel had ouk gerne dat de karken en [[klooster]]s med öäre [[bookhoolding|bookholdingsgebruken]] allens dale skreyven.
 
-In [[779]] kreeg Koarel [[Oostfalen|Oostfaaln]], [[Westfalen|Westfaaln]] en [[Engern]] dr oonder.
+In [[779]] kreyg Korel [[Oostfalen]], [[Westfalen]] en [[Engern|Engeren]] der under.
 
 ==Grootn opstaand==
 Koarel vermoodn det de Saksen zik skoonwal neet lange heanig zoln hooldn. Oonderwiel voorn Koarel heffingn in, bestrafn oolde Germaanse geleufsgebroekn en dwung de Saksen oonder zik um Kristn te wordn. Hierduur wördn de Saksen inderdaad wier opstaandig. Wittekeend was dr wier oet Deanemoarkn en zorgen at de Saksen gungn saamnwoarkn. Ze oawervöln döarpe van de Fraankse [[Chatn]] in wat non [[Hessen]] is. Ze hadn zik ditmoal better organiseerd en dorven non ook in t lösse veeld te vechtn. Dit saksenleager besteund vuural oet boern. De heugere staandn hadn zik bie Koarel anslötn.
@@ -32,7 +32,7 @@ Koarel kreeg in zinn oorlog teegn de Saksen hulpe van zeandelingn. Hee leut ne w
 
 In [[783]] wör dr bie Deetmoold en bie de Haze wier evöchtn. Hier zoln Saksiese vrouwleu met blote börste op de Fraankn wean an evöln. Dee warn hierduur kats oawerdoonderd. [[Fastrada]], de latere vrouwe van Koarel, leut zik skoonwal neet van de wieze brengn en deed korrekt t zelfde teegn de Saksen. Dr wörd ook beweard at Fastrada Koarel influstern vuur t Bloodbad van Verdn. 
 
-In [[784 ]]<nowiki/>kömn de [[Freeslaand|Freesken]] de Saksen helpn. Dit hadn ze ook al earder doon. De Saksen kömn skoonwal aait mear in t gedrang, ondaanks öare vechtlust. De grötste ummekeer köm doo't hartog Wittekeend zik in [[785]] deupn leut en trouw beloawn an Koarel. Den was ook meteen zinn peter. In t Nederlaandse deel van de Saksen wör vanof toen neet mear vöchtn.  
+In [[784 ]]<nowiki/>kömn de [[Freeslaand|Freesken]] de Saksen helpn. Dit hadn ze ook al earder doon. De Saksen kömn skoonwal aait mear in t gedrang, ondaanks öare vechtlust. De grötste ummekeer köm doo't hartog Wittekeend zik in [[785]] deupn leut en trouw beloawn an Koarel. Den was ook meteen zinn peter. In t Nederlaandse deel van de Saksen wör vanof toen neet mear vöchtn.
 ==Verwiezingn==
 <references/>
 
