[[Mare_Imbrium-Apollo17.jpg]] is vervungen deur [[Mare_Imbrium-AS17-M-2444.jpg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file set) · i

--- a/Maone_(eerde).mw
+++ b/Maone_(eerde).mw
@@ -29,7 +29,7 @@ De moan is ook n [[simbool]] veur t vraawleke, de zunne stait veur t mannelieke.
 |}
 
 == Oppervlak ==
-[[Bestaand:Mare Imbrium-Apollo17.jpg|thumb|200px|Et maonoppervlak]]
+[[Bestaand:Mare Imbrium-AS17-M-2444.jpg|thumb|200px|Et maonoppervlak]]
 === Inslagkraoters ===
 Et grootste diel van et maonoppervlak is bedekt mit inslagkraoters. De meerste daorvan liggen in de "Hooglaanden" van de Maone. Daor bin kraoters die uut de tied van et groot oerbombardement, waorin de resten van et ontstaon van et zunnestelsel terechte kwam op de planeten en maonen. Een minderhied van de kraoters, zoas Copernicus en Tycho, bin jonger. Deurdat de maone gien atmosfeer het zien de kraoters d'r nog goed bewaord uut nao 4 miljard jaor.
 
