--- a/Achter-Zuwwent.mw
+++ b/Achter-Zuwwent.mw
@@ -20,10 +20,10 @@
 | webstee = [http://www.marienvelde.nl marienvelde.nl]
 | region = NL-GE
 }}
-'''Achter-Zuwwent''' ([[Nederlaands|Nederlands]]: ''Mariënvelde'') is ne buurtschap in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]].
+'''Achter-Zöwwent''' ([[Nederlaands|Nederlands]]: ''Mariënvelde'') is een buurtschap in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]].
 
 ==Veraenegingslaeven==
-Ze hebt ook enen voetbalclub enaamd: vvm ([[v.v. Mariënveld]]) <ref> [http://www.vvmarienveld.nl vv Mariënveld] </ref>
+Ze hebt ook enen voetbalclub enaamd: VVM ([[v.v. Mariënveld]]) <ref> [http://www.vvmarienveld.nl vv Mariënveld] </ref>
 
 ==Wellen en oetgaonde verwiezingen==
 <references />
