Spelling in infobox verbeterd

--- a/Achter-Zuwwent.mw
+++ b/Achter-Zuwwent.mw
@@ -1,5 +1,5 @@
 {{Ploats in Nederlaand
-| naam = Achter-Zuwwent
+| naam = Achter-Zöwwent
 | soorte = Buurtskop
 | bestansnaam vlagge =
 | bestansnaam wapen =
