--- a/Zöwwent.mw
+++ b/Zöwwent.mw
@@ -1,4 +1,27 @@
-'''Zöwwent''' ([[Nederlands]]: ''Zieuwent'', [[Zöwwents]]: ''Söwwent'') is een darp in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]]. Het hef umsgeveer 2000 inwoners.
+{{Ploats in Nederlaand
+| naam = Zöwwent
+| soorte = Darp
+| bestansnaam vlagge =
+| bestansnaam wapen =
+| lokasie = 
+| gemeente = [[Ofbeelding:Coat of arms of Oost Gelre.svg|20px|Oost Gelre]] [[Oost Gelre]]
+| previnsie = [[Ofbeelding:Gelderland-Flag.svg|20px|Gelderlaand]] [[Gelderlaand]]
+| oppervlak = 
+| oppervlak laand =
+| oppervlak water =
+| inwoners = 2109
+| doatum inwoners = 1 Jannewaori 2013
+| dichtheid = 
+| breedtegroad = 51/59/59/N
+| lengtegroad = 6/31/25/E
+| verkeersoader =  
+| netnummer = 
+| postcode = 
+| webstee = 
+| region = NL-GE
+}}
+
+'''Zöwwent''' ([[Nederlands]]: ''Zieuwent'', [[Zöwwents]]: ''Söwwent'') is een darp in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]]. Het hef umsgeveer 2100 inwoners.
 
 Ut meest opvallende gebouw in Zöwwent is de [[katholieke]] St. Werenfridus [[Kaark (gebouw)|karke]]. Disse karke is in de [[19e eeuw]] ebouwd in de [[neo-gotisch]]e bouwstiel. In verholding met de grootte van ut darp is de karke zeer groot te numen. Hi-j wordt dan ok wal, noast de [[Ni'je Calixtuskarke]] in [[Grolle]],  de kathedraal van den [[Achterhoek]] enuumd.
 
