Infobox inhoud toegevoegd

--- a/Zöwwent.mw
+++ b/Zöwwent.mw
@@ -6,17 +6,17 @@
 | lokasie = 
 | gemeente = [[Ofbeelding:Coat of arms of Oost Gelre.svg|20px|Oost Gelre]] [[Oost Gelre]]
 | previnsie = [[Ofbeelding:Gelderland-Flag.svg|20px|Gelderlaand]] [[Gelderlaand]]
-| oppervlak = 
+| oppervlak = 17,36
 | oppervlak laand =
 | oppervlak water =
-| inwoners = 2109
-| doatum inwoners = 1 Jannewaori 2013
+| inwoners = 2030      
+| doatum inwoners = 1 Jan 2018
 | dichtheid = 
 | breedtegroad = 52/00/22/N
 | lengtegroad = 06/31/11/E
-| verkeersoader =  
-| netnummer = 
-| postcode = 
+| verkeersoader = [[N312]]
+| netnummer = 0544
+| postcode = 7136
 | webstee = 
 | region = NL-GE
 }}
