--- a/Zöwwent.mw
+++ b/Zöwwent.mw
@@ -21,7 +21,7 @@
 | region = NL-GE
 }}
 
-'''Zöwwent''' ([[Nederlands]]: ''Zieuwent'', [[Zöwwents]]: ''Söwwent'') is een darp in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]]. Het hef umsgeveer 2100 inwoners.
+'''Zöwwent''' ([[Nederlands]]: ''Zieuwent'', [[Zöwwents]]: ''Söwwent'' of ''Söwent'') is een darp in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]]. Het hef umsgeveer 2100 inwoners.
 
 Ut meest opvallende gebouw in Zöwwent is de [[katholieke]] St. Werenfridus [[Kaark (gebouw)|karke]]. Disse karke is in de [[19e eeuw]] ebouwd in de [[neo-gotisch]]e bouwstiel. In verholding met de grootte van ut darp is de karke zeer groot te numen. Hi-j wordt dan ok wal, noast de [[Ni'je Calixtuskarke]] in [[Grolle]],  de kathedraal van den [[Achterhoek]] enuumd.
 
