--- a/Halloween.mw
+++ b/Halloween.mw
@@ -7,7 +7,7 @@ Et feest kümt noch by de olde [[kelten]] vord. By ear wördden et ''[[Samhain]]
 De [[germanen]] (nåbüürs van de kelten) hadden ouk een feest, dee se vyrden rund de tyd dat wy nu karst hebbet (25 december) töt Dreekoaningen (6 januari). Disse steyt oukwal bekend as et ''juul''. Ouk hyr jagen de vöärolder döär de lücht hen en kwamen sy by ear noch leavende verwanten ümme de döäre kyken. De germanen spöälden dit ouk nå döär sich te verkleaderen in derenhüden en maskers up den kop en groute ümmegangen te maken gån. Groute vüren stokken sy an en earden de vöärolder en wolden samen med ear de doude natuur wear up gang krygen.
 
 ===Middeleywen===
-In christelike tyd wördden et keltiske feest ümmeförmd når een feest med wat meyr christelike inhold. Et katolike ''Allerselen'' kümt uut de benediktyner kloostertradity van [[Cluny]], Frankryk, wår as [[Odilo van Cluny]] et in 998 vöär et eyrste mål vyren löät. In de 13. eywe kreygen et de name Allerselen. Mar de olde elementen van et Samhainfeest, dee bewård bleyvden by et burenvolk van Yrland, wördden an dissen dag eplakked. Samhain is een feest ümme de douden te earen, de vöärolder in gedachten te holden. So ouk Allerselen, dee up 2 november is. Vöär Allerselen kwam ''Allerheiligen'', een dag speciaal vöär de christelike heiligen en martelaars. De åvend te vöärend (31 oktober) wördet de vöärbereidings edåne van disse dagen, in et engelsk is et ''All Hallows' Eve(ning)'' of Halloween enöömd.
+In christelike tyd wördden et keltiske feest ümmeförmd når een feest med wat meyr christelike inhold. Et katolike ''Allerselen'' kümt uut de benediktyner kloostertradity van [[Cluny]], Frankryk, wår as [[Odilo van Cluny]] et in 998 vöär et eyrste mål vyren löät. In de 13. eywe kreygen et de name Allerselen. Mar de olde elementen van et Samhainfeest, dee bewård bleyvden by et burenvolk van Yrland, wördden an dissen dag eplakked. Samhain is een feest ümme de douden te earen, de vöärolder in gedachten te holden. So ouk Allerselen, dee up 2 november is. Vöär Allerselen kwamt ''Allerheiligen'', een dag speciål vöär de christelike heiligen en martelaars. De åvend te vöärend (31 oktober) wördet de vöärbereidings edåne van disse dagen, in et engelsk is et ''All Hallows' Eve(ning)'' of Halloween enöömd.
 
 Vanuut et middeleywske volksgelöyv wördt der altyd esegd dat up disse åvend de heksen by mekare kumt. Een ''heksensabbat'' wördt dat enöömd. Dee heksen kwamen by mekare ümme te töyveren en kwåde sprökken uut te sprekken. [[Cailleach]] was in de keltiske wearld so ne heksenwyv dee in nen kettel röörden ümme leaven en doud te bepålen.
 
