--- a/Naober.mw
+++ b/Naober.mw
@@ -4,7 +4,7 @@ Oen '''naober''' is iene wel as naost oe woont. De naobers waren veural vrogger 
 
 ==Nedersaksisch==
 't spellingsverskil ''ao''/''oa'' giet terogge op tredisie en daoruut egruuide spellingsveurskriften, niet op uutspraoke. Allent de [[Grunnegs]]e ''oa'' klinkt donkerder as de ''ao''/''oa'' van de aandere [[Nedersaksisch]]e taalgebieden.
-Vandage gebruukt ok veul Nederlaands-Nedersaksische sprekers 't Nederlaandse ''buur(man, -vrouw)'', mv. ''buren''.
+Vandage gebruukt ok veul Nederlaands-Nedersaksische sprekers 't Nederlaandse ''buur(man, -vrouw)'', mv. ''buren'' of ''buur'n''.
 
 *[[Achterhooks]]: ''naober'', mv. ''naobers'' (mangs ook ''noawas'')
 *[[Drèents]]: ''naober'', mv. ''naobers''
