--- a/Naober.mw
+++ b/Naober.mw
@@ -10,7 +10,7 @@ Vandage gebruukt ok veul Nederlaands-Nedersaksische sprekers 't Nederlaandse ''b
 *[[Drèents]]: ''naober'', mv. ''naobers''
 *[[Graofschopper plat]]: ''Noaber'', mv. ''Noabers'' ([[Vosbergenschriefwiese]] ''nåber'')
 *[[Grunnegs]]: ''noaber'', mv. ''noabers''
-*[[Sallaands]]: ''naober'', mv. ''naobers'', teengsworig ait ''buren''
+*[[Sallaands]]: ''naober'', mv. ''naobers'', tegenwoordig meestal ''buren''
 *[[Stellingwarfs]]: ''naober'', mv. ''naobers''
 *[[Tweants]]: ''noaber'', mv. ''noabers'' (mangs ook ''noawas'')
 *[[Veluws]]: ''buren, buurman/buurvrouw'' (vrogger: ''naober'')
