--- a/Heemenneke.mw
+++ b/Heemenneke.mw
@@ -1,19 +1,19 @@
-De '''Heemennekes''' ([[Tweante]]) of '''Heemannegies''' ([[Drenthe]], [[Oaveriessel|Noord-Oaweriessel]]) beent n volksken oet oolde Oost-Nederlaandse volksverhaaln. De leu meann det t roonddwelnde zelen beent, dee't bie leawn wat hadn oet evretn. Doarumme mut ze noe dweln en vaalt ze leu lastig. Nöast at de verhaaln oawer de Heemennekes nen stichteliken bosskop hebt, wördn de verhaaln ook as vermaak duurverteeld.
+De '''Heemennekes''' ([[Tweante]]) of '''Heemannegies''' ([[Drenthe]], [[Oaveriessel|Noord-Oaweriessel]]) beent een volksken oet oolde Oost-Nederlaandse volksverhalen. De leu meanen det et roonddwellende zelen beent, dee't bie leawen wat hadden oet evretten. Doarumme mut ze noe dwellen en vaalt ze leu lastig. Nöast at de verhalen oawer de Heemennekes nen stichteliken bosskop hebt, wörden de verhalen ook as vermaak duurverteeld.
 
-De Heemennekes daankt öarn naam an t geleuf det de dwellezelen as kleaine kearlkes langs de weg zatn, en leu dee't 's naches op pad warn lastigvöln met tooverdan "Hee!" te skreewn en ze dwars te lign.
+De Heemennekes daankt öaren naam an et geleuf det de dwellezelen as kleaine kearlkes langs de weg zatten, en leu dee't 's naches op pad warren lastigvöllen met tooverdan "Hee!" te skrewen en ze dwars te liggen.
 
-Net as met de volksverhaaln oawer de [[witte wieven|Witte Wiewe]] bestoat dr meardere verhaaln oawer de Heemennekes, dee't dan met mekaar t volledige beeld geewt van wat de Heemennekes beent.
+Net as met de volksverhalen oawer de [[witte wieven|Witte Wiewe]] bestoat der meardere verhalen oawer de Heemennekes, dee't dan met mekaar et volledige beeld geewt van wat de Heemennekes beent.
 
 ==Vuurbeeld==
-n Bekeand Tweants verhaal geet dr oawer det de Witte Wiewe verskel hadn met de Heemennekes.  t Verhaal geet det de Witte Wiewe in de oolde grafheuwels bie [[Rossum (Oaveriessel)|Rossum]] wonn. De Heemennekes veundn det ook wal nen mooin stean. De Witte Wiewe woln öare wonnings natuurlik nit ofstoan, wat oeteaindelik op nen veeldslag oetleup. Dr wör ne ofspraak emaakt um t op te lösn: De Witte Wiewe bleewn woer't ze warn, want zee wonn dr ja t lengste. De Heemennekes mosn aargns aanders wat bouwn. Mer t meuiste Witte Wief mos trouwn met de keuning van de Heemennekes.<ref>[http://www.bymerel.nl/Boeken_files/ANWB.pdf bymerel.nl. Nationaal Landschap Noord-Oost Twente.] Sagensafari: ''Kijk uit voor de Hellehond''. 24 september 2010</ref>
+Een bekeand Tweants verhaal geet der oawer det de Witte Wiewe verskel hadden met de Heemennekes. Et verhaal geet det de Witte Wiewe in de oolde grafheuwels bie [[Rossum (Oaveriessel)|Rossum]] wonnen. De Heemennekes veunden det ook wal nen mooien steaden. De Witte Wiewe wollen öare wonnings natuurlik nit ofstoan, wat oeteaindelik op nen veeldslag oetleup. Der wör ne ofspraak emaakt um et op te lössen: De Witte Wiewe blewen woer't ze warren, want zee wonnen der ja et lengste. De Heemennekes mosden aargens aanders wat bouwen. Mer et meuiste Witte Wief mos trouwen met de keuning van de Heemennekes.<ref>[http://www.bymerel.nl/Boeken_files/ANWB.pdf bymerel.nl. Nationaal Landschap Noord-Oost Twente.] Sagensafari: ''Kijk uit voor de Hellehond''. 24 september 2010</ref>
 
 ==Nut==
-t Nut van t Heemennekesgeleuf was um de leu zik te loatn gedreagn, want steelt oe vuur de'j zelf zonne onröstige, dwelnde zele zoln wordn. Leu dee't zik bangen vuur de Heemennekes gungn bie zikzelf noa of ze wal good leawn en pasn öar gedrag dr op an.
+Et nut van et Heemennekesgeleuf was um de leu zik te loaten gedreagen, want steelt oe vuur de'j zelf zonne onröstige, dwellende zele zollen worden. Leu dee't zik bangen vuur de Heemennekes gungen bie zikzelf noa of ze wal good leawen en passen öar gedrag der op an.
 
-Nöast t stichtelike van de verhaaln zat dr ook n vermaak in. De verhaaln stamt oet de tied det de meeste leu nit konn leazn of skriewn, dus beukevermaak was dr nit of hoaste nit. De verhaaln wördn um t veur verteeld. Mangs, as dr bekeand wör det dr nen verteller op bezeuk köm, wör de hele [[noaberskop]] eneugnd um noar de verhaaln te lustern.
+Nöast et stichtelike van de verhalen zat der ook een vermaak in. De verhalen stamt oet de tied det de meeste leu nit konnen leazen of skriewen, dus beukevermaak was der nit of hoaste nit. De verhalen wörden um et veur verteeld. Mangs, as der bekeand wör det der nen verteller op bezeuk kömmen, wör de hele [[noaberskop]] eneugend um noar de verhalen te lusteren.
 
 ==Heemennekes in de beuke==
-Oawer Heemennekes is nit völle skreewn. Ook nit in de [[Nedersaksische literetuur|Neersassiese skriefkeunsten]]. t Ennigste bekeande verhaal wat de Heemennekes angeet keump van [[G.B. Vloedbeld]] in zin book ''Mans Kapbaarg'', woerin't ene van de heuwdfiguurn tiedns n gevecht in t [[Fraankriek|Fraanske]] leager wörd ehulpn duur de Heemennekes, umdet hee de Heemennekes earder hef ehulpn.
+Oawer Heemennekes is nit völle skrewen. Ook nit in de [[Nedersaksische literetuur|Neersassiese skriefkeunsten]]. Et ennigste bekeande verhaal wat de Heemennekes angeet keump van [[G.B. Vloedbeld]] in zin book ''Mans Kapbaarg'', woerin et ene van de heuwdfiguren tiedens een gevecht in et [[Fraankriek|Fraanske]] leager wörd ehulpen duur de Heemennekes, umdet hee de Heemennekes earder hef ehulpen.
 
 ==Reffereansies==
 <references/>
