--- a/Heemenneke.mw
+++ b/Heemenneke.mw
@@ -8,7 +8,7 @@ Net as met de volksverhalen oawer de [[witte wieven|Witte Wiewe]] bestoat der me
 Een bekeand Tweants verhaal geet der oawer det de Witte Wiewe verskel hadden met de Heemennekes. Et verhaal geet det de Witte Wiewe in de oolde grafheuwels bie [[Rossum (Oaveriessel)|Rossum]] wonnen. De Heemennekes veunden det ook wal nen mooien steaden. De Witte Wiewe wollen öare wonnings natuurlik nit ofstoan, wat oeteaindelik op nen veeldslag oetleup. Der wör ne ofspraak emaakt um et op te lössen: De Witte Wiewe blewen woer't ze warren, want zee wonnen der ja et lengste. De Heemennekes mosden aargens aanders wat bouwen. Mer et meuiste Witte Wief mos trouwen met de keuning van de Heemennekes.<ref>[http://www.bymerel.nl/Boeken_files/ANWB.pdf bymerel.nl. Nationaal Landschap Noord-Oost Twente.] Sagensafari: ''Kijk uit voor de Hellehond''. 24 september 2010</ref>
 
 ==Nut==
-Et nut van et Heemennekesgeleuf was um de leu zik te loaten gedreagen, want steelt oe vuur de'j zelf zonne onröstige, dwellende zele zollen worden. Leu dee't zik bangen vuur de Heemennekes gungen bie zikzelf noa of ze wal good leawen en passen öar gedrag der op an.
+Et nut van et Heemennekesgeleuf was um de leu zik te loaten gedreagen, want steelt oe vuur de'j zelf zo'ne onröstige, dwellende zele zollen worden. Leu dee't zik bangen vuur de Heemennekes gungen bie zikzelf noa of ze wal good leawen en passen öar gedrag der op an.
 
 Nöast et stichtelike van de verhalen zat der ook een vermaak in. De verhalen stamt oet de tied det de meeste leu nit konnen leazen of skriewen, dus beukevermaak was der nit of hoaste nit. De verhalen wörden um et veur verteeld. Mangs, as der bekeand wör det der nen verteller op bezeuk kömmen, wör de hele [[noaberskop]] eneugend um noar de verhalen te lusteren.
 
