--- a/Nedersaksische_sagen_en_legendes.mw
+++ b/Nedersaksische_sagen_en_legendes.mw
@@ -153,14 +153,14 @@ Allemoale hebt ze hum nog nooit eziene of espreuken. Wie zöch in de archieven k
 Zien geest waart nog rondte deur de talrieke roezende eken en bökken op 't Vechtdal. En wie dizze boavenaardse gewaarnemming of wul doen as 'n spirreteweel verzinsel mut maar es 'n kiekie nemmen in 't wold de noorden van Vilsteren. Doar zult tastbare herinnerings in de vörme van 'n hutte - en op 'n stienwurp ofstaand 't graf - de twiefels vort doen.
 
 ===D' Hongrige Wolf===
-Ommen hef iets met wolven: de Wolfskoele, de Hongerige Wolf, Wolfveldseweg of kaamping de Kleane Wolf. Bewoners uit disse streke wödn eerder ok ait an-eduud as ‘van op de Wolf‘. Later bint dat de boerschoppen Hoogegraven en Stegeren ewödn. 
+Ommen hef iets met wolven: de Wolfskoele, de Hongerige Wolf, Wolfveldseweg of kaamping de Kleine Wolf. Bewoners uit disse streke wördden eerder ok ait an-eduud as ‘van op de Wolf‘. Later bint dat de boerschoppen Hoogegraven en Stegeren ewörden. 
 
-Wie terugge giet in de geschiedenisse over 't ontstoan van de namen kump nie verder as verhaalties. De Wolfskoele is nog stieds 'n uut wit zaand bestoande verheuging op 't raand van 't bos en de overlope van de reviere de Regge. Ooit zol bi-j de wolfskoele 'n wolf eziene ween en iene 't arrig benauwt emaakt hebben. De koele bestiet altied nog.
+Wie terugge giet in de geschiedenisse over 't ontstoan van de namen kump nie verder as verhaalties. De Wolfskoele is nog steeds 'n uut wit zaand bestoande verheuging an de raand van 't bos en de overlope van de reviere de Regge. Ooit zol bi-j de wolfskoele 'n wolf eziene ween en iene 't arreg benauwt emaakt hebben. De koele bestiet altied nog.
 
 Dat van de Hongerige Wolf is 'n verhaaltie wat zich ofspöllen in de Middeleewen.
-In de moand febrewori 1379 wol jonkvrouwe Ida, de dochter van Everhardus van Essen, bewoner op 't [[kasteel Eerde]] 'n bezuuk doen an heur vriendinne Kunigonda van de [[Collendoorn|Coldern]]. Saam met heur knechte kwaam ze te peerd in 't dichte bos in, woarumme as doar de Hessenweg leup. Zi-j kenden de weg deur de wildernisse wel, dus zat ter gaank in. Mar opiens heuren zi-j 'n slim reren. Toe haden 'n troep wolven de jonkvrouwe en heur knechte ereuken en den veulen eur an. De knechte perberen zich zo best as 'e dat konnen n beiden te beskarmen. En de jonkvrouwe mar roepen umm' hölpe. Op 't mement dat de jonkvrouwe veur iene van de wolven 't etten zol wödn, sprung der 'n jonkkeerl uut de struken en deu met zien pijle en boge de wolvn votjagen.
+In de moand febrewari 1379 wol jonkvrouwe Ida, de dochter van Everhardus van Essen, bewoner op 't [[kasteel Eerde]] 'n bezuuk doen an heur vriendinne Kunigonda van de [[Collendoorn|Coldern]]. Saam met heur knechte kwaam ze te peerd in 't dichte bos in, woarumme as doar de Hessenweg leup. Zi-j kenden de weg deur de wildernisse wel, dus zat ter gaank in. Mar opiens heurden zi-j 'n slim reren. Toe had 'n troep wolven de jonkvrouwe en heur knechte ereuken en den veulen hun an. De knechte perberen zich zo best as 'e dat konnen n beiden te beskarmen. En de jonkvrouwe mar roepen umme hölpe. Op 't mement dat de jonkvrouwe veur iene van de wolven 't etten zol wörden, sprung der 'n jonkkeerl uut de struken en deu met zien pijle en boge de wolven votjagen.
 
-Deur 't lude reren en blokken van de wolven was jonkkeerl Rudolf van Coldern noar de plekke van 't geluud 'en-ekommen. Dat zien peerd zo hard leupen hef der veur ezörgd dat 'e nog net-an op tied was. Sund die tied stiet der op disse plekke 'n harbarg die de Hongerige Wolf het. Zo wödn 't dappere opkommen van de jonkkeerl altiedn nog heugt.
+Deur 't lude reren en blokken van de wolven was jonkkeerl Rudolf van Coldern noar de plekke van 't geluud 'en-ekommen. Dat zien peerd zo hard leupen hef der veur ezörgd dat 'e nog net-an op tied was. Sund die tied stiet der op disse plekke 'n herbarg die de Hongerige Wolf het. Zo wörden 't dappere opkommen van de jonkkeerl altieden nog heugt.
 
 ===Witte Wievn===
 Zo a'w oaver 't hele Saksenlaand de verhaaln van de witte wieven tegen komt, kom iej ze ok teagn op 't Vechtdal. Veural s'oavens of met 't skemeren mu'j
