--- a/Oldsassiske_döypgelovde.mw
+++ b/Oldsassiske_döypgelovde.mw
@@ -1,12 +1,12 @@
-[[Bestaand:Gallee.jpg|thumb|right|230px|tekste med de dööpbelovte, et oldsassisk/olddüütsk nåst et latyn.]]
+[[Bestaand:Gallee.jpg|thumb|right|230px|tekste med de döypbelovte, et oldsassisk/olddüütsk nåst et latyn.]]
 
-De '''Oldsassiske dööpbelovte''' ov '''Ütrechtse dööpbelovte''' kümt uut et ende van de [[8e eeuw|8e ewe]] (776-800) en is een [[Christendom|kristelike]] tekste in een olde [[West-Germoanse toalen|West-Germaanse språke]], wårmed de bewoners van de döär de [[Karolingen]] underwörpen gebeden ear gelöyv in de [[Oldsassiske godsdeenst|Germaanse godsdeenst]] mosten oafsweyren en ear nye gelöyv in God den vader, Kristus as gods söne en de [[Heilige Geest|Heiligen Geest]] to mosten geaven.
+De '''Oldsassiske döypbelovte''' of '''Ütrechtske döypbelovte''' kümt uut et ende van de [[8e eeuw|8e eywe]] (776-800) en is een [[Christendom|christelike]] tekste in een olde [[West-Germoanse toalen|west-germaanske språke]], wårmed de bewoaners van de döär de [[Karolingen]] underwörpen gebeden ear gelöyv in de [[Oldsassiske godsdeenst|germaanske godsdeenst]] mosden ofsweyren en ear nye gelöyv in God den vader, Christus as gods söäne en de [[Heilige Geest|Heiligen Geyst]] to mosden geaven.
 
-==Manuscript==
-De dööpbelovte is over-eleyverd in een [[Handschrift (boek)|book]] uut de 8e ewe,  bewård in de ''[[Biblioteca Apostolica Vaticana]]'', de byblioteek van et Vaticaan in [[Rome]], de ''Codex Palatinus Latinus'' 577, op ''folio'' 6 ''verso'' en 7 ''recto''. De belovte wördt evolgd döär de so-enömede ''[[indiculus superstitionum et paganiarum]]'', een ryge van 30 heidense gebrüken.
+==Manuskript==
+De döypbelovte is oaver-eleaverd in een [[Handschrift (boek)|book]] uut de 8e eywe,  bewård in de ''[[Biblioteca Apostolica Vaticana]]'', de byblioteek van et Vatikaan in [[Rome]], de ''Codex Palatinus Latinus'' 577, up ''folio'' 6 ''verso'' en 7 ''recto''. De belovte wördt evolgd döär de so-enöömde ''[[indiculus superstitionum et paganiarum]]'', een ryge van 30 heidenske gebruken.
 
 ==Språke==
-Over de språle wårin et stük eskreyven is bint se et noch neet heylemåle eyns. Völle Neaderlandse undersökers segt dat de tekste een dialekt van et [[Oldneadervrankisk]] is (vöärlouper van et Neaderlands). Mar Düütske undersökers segt weyr dat de tekste jüüste in er [[Oldsaksisch|Oldsassisk]] eskreyven is.
+Oaver de språke wårin et stük eskreaven is bint se et noch neet heylemåle eyns. Vöäle neaderlandske undersöykers segget dat de tekste een dialekt van et [[oldneadervrankisk]] is (vöärlouper van et neaderlandsk). Mar düütske undersöykers segget wear dat de tekste jüüste in et [[Oldsaksisch|oldsassisk]] eskreaven is.
 
 == De tekste ==
 
@@ -14,25 +14,25 @@ Over de språle wårin et stük eskreyven is bint se et noch neet heylemåle eyn
 |-
 | ''1. Forsachistu diobolae?'' ||1. Versaak y de düvel?,
 |-
-| ''& respondeat. ec forsacho diabolae.'' ||(en most antwoorden:) Ik versake de düvel.
+| ''& respondeat. ec forsacho diabolae.'' ||(en mosd antwoorden:) Ik versake de düvel.
 |-
 | ''2. end allum diobolgelde?'' ||2. en alle düvel ovvers?
 |-
-| ''respondeat. end ec forsacho allum diobolgeldae.'' ||(en most antwoorden:) en ik versake alle düvel ovvers.
+| ''respondeat. end ec forsacho allum diobolgeldae.'' ||(en mosd antwoorden:) en ik versake alle düvel ovvers.
 |- 
-| ''3. end allum dioboles uuercum?'' ||3. en alle düvelse warken?
+| ''3. end allum dioboles uuercum?'' ||3. en alle düvelske warken?
 |-
-| ''respondeat. end ec forsacho allum dioboles uuercum and uuordum,'' ||(en most antwoorden:) en ik verzake alle düvelse warken en woorden, 
+| ''respondeat. end ec forsacho allum dioboles uuercum and uuordum,'' ||(en mosd antwoorden:) en ik versake alle düvelske warken en woorden, 
 |-
-| ''Thunaer ende Uoden ende Saxnote ende allum them unholdum, the hira genotas sint.'' ||Donar en Wodan en [[Saxnot|Saksnoot]] en al de oafgoden, dee ear genöyten bint.
+| ''Thunaer ende Uoden ende Saxnote ende allum them unholdum, the hira genotas sint.'' ||Donar en Wodan en [[Saxnot|Saksnoot]] en al de ofgoden, dee ear genöäten bint.
 |-
 | ''4. gelobistu in got alamehtigan fadaer'' ||4. gelöyv y in God de almachtigen vader?
 |-
 | ''ec gelobo in got alamehtigan fadaer'' ||ik gelöyve in God de almachtigen vader.
 |-
-| ''5. gelobistu in crist godes suno'' ||5. gelöyv y in Kristus Gods söne?
+| ''5. gelobistu in crist godes suno'' ||5. gelöyv y in Kristus God's söäne?
 |-
-| ''ec gelobo in crist gotes suno.'' ||ik gelöyve in Kristüs Gods söne.
+| ''ec gelobo in crist gotes suno.'' ||ik gelöyve in Kristüs God's söäne.
 |-
 | ''6. Gelobistu in halogan gast.'' ||6. gelöyv y in de Heiligen Geest?
 |-
