*Empty MediaWiki Message*

--- a/D'où_venons-nous,_Que_sommes-nous?_Où_allons-nous?.mw
+++ b/D'où_venons-nous,_Que_sommes-nous?_Où_allons-nous?.mw
@@ -1,8 +1,8 @@
-'''D'où venons-nous, Que sommes-nous? Où allons-nous?''' (neadersassisk: ''Wår kummet wy vord? Wee binnet wy? Wår gåt wy up an?'') Is een skilderye van de künstskilder [[Paul Gauguin]].
+'''D'où venons-nous, Que sommes-nous? Où allons-nous?''' (neadersassisk: ''Wår kummet wy vord? Wee bint wy? Wår gåt wy up an?'') Is een skilderye van de künstskilder [[Paul Gauguin]].
 
-Hy hevt et emaket up [[Tahiti]]. Gauguin was 'evlüchet' van de Westerse beskaving, hy vünden et mar een neppe sooy. Up Tahiti dachtten he oorsprüngelike, 'primityve' mensken te vinden. Hy süchten når et religyöse leyven van de mensken dår, de seksuele vryheid, een kulture dee neet döär et 'beskaavde westen' was kapot emaket. Dår an-ekummen kwamt he te kyken, dat de mensken dår ouk al meyrendeyls kristelik waren en in franse klearen rundlöypen. Toch löät he in syn skilderyen vöäle van de bygelöyven en (de döär hüm sölv efantasearde) seksuele vryheid seen. Ümme disse warken is he dan ouk bekend ewörden, hevt he by edragen an de untwikkeling van de moderne künst. 
+Hy hevt et emaked up [[Tahiti]]. Gauguin was 'evlüched' van de westerske beskaving, hy vünden et mar een neppe sooi. Up Tahiti dachtden hee oorsprüngelike, 'primitive' mensken te vinden. Hy söchten når et religiöse leaven van de mensken dår, de seksuele vryigheid, een kulture dee neet döär et 'beskaavde westen' was kapot emaked. Dår an-ekummen kwamt hee te kyken, dat de mensken dår ouk al meyrendeyls christelik waren en in vranske klearen rundlöypen. Toch löät hee in syn skilderyen vöäle van de bygelöyven en (de döär hüm sülv efantaseyrde) seksuele vryigheid seen. Ümme disse warken is hee dan ouk bekend ewörden, hevt hee by edragen an de untwikkeling van de moderne künst. 
 
-Vöär dat he sülvmoord döäden -wat hüm neet best lükten-, had he dit skilderye emaket, syne 'Magnum Opus'. Et is 139 cm by 375 cm. Dårnå hevt hy noch enkele skilderyen emaket, wårnå he uut de tyd kummen döär een geslächtseekte. Up dit skilderye had he alles up willen te setten, alles wat hy van et leyven en de künst dachtten.
+Vöär dat hee sülvmoord döäd -wat hüm neet best lükten-, had hee dit skilderye emaked, syne 'Magnum Opus'. Et is 139 centimeater by 375 centimeater. Dårnå hevt hy noch enkele skilderyen emaked, wårnå hee uut de tyd kummen döär een geslächtseekte. Up dit skilderye had hee alles up willen te setten, alles wat hy van et leaven en de künst dachtden.
 
 Et hangt nu up et Museum of Fine Arts op Boston, Amerika.
 
