*Empty MediaWiki Message*

--- a/1939.mw
+++ b/1939.mw
@@ -1,5 +1,5 @@
 {{NavJaor}}
-'t jaor '''1939''' is 'n jaortal volgens de [[Christendom|christelijke]] jaortelling.
+'''1939''' is 'n jaortal volgens de [[Christendom|christelijke]] jaortelling.
 
 == Gebeurtenissen ==
 
