--- a/1939.mw
+++ b/1939.mw
@@ -1,54 +1,57 @@
 {{NavJaor}}
 '''1939''' is 'n jaortal volgens de [[Christendom|christelijke]] jaortelling.
 
+{{NavJaor}}
+'''1939''' is 'n jaortal volgens de [[Christendom|christelijke]] jaortelling.
+
 == Gebeurtenissen ==
 
 ;februari
-* 11 - [[Lise Meitner]] en [[Otto Frisch]] plaotsen in 't wekkelijks blad ''Nature'' veur 't eerst over [[kernsplijting]].
-* 14 - In [[Duutsland]] wordt den [[Bismarck (slagschip)|Bismarck]] te waoter elaoten, 't grootste slagskib in den welt.
+* 11 - [[Lise Meitner]] en [[Otto Frisch]] plaotsen in 't wekkelijks blad ''Nature'' veur 't eerst över [[kernsplieting]].
+* 14 - In [[Duutsland]] wordt den [[Bismarck (slagskib)|Bismarck]] te waoter elaoten, 't grootste [[slagskib]] in den welt.
 
 ;maart
 * 12 - Eugenio Maria Giuseppe Giovannie Pacelli wordt als [[Paus Pius XII|Pius XII]] ekroond tot [[Paus]]. 
-* 14 - Met den hulpe van [[Adolf Hitler|Hitler]] roepen Slowaakse separatisten den onafhankelijkheid uut van [[Eerste Slowaakse Republiek|Slowakije]], dat 'n vazalstaot van [[Nazi-Duutsland]] wordt.
-* 15 - Duutse troepen bezetten [[Praog]]. Het overblievende [[Tsjechië|Tsjechische]] hartland wordt [[annexatie|eannexeerd]] deur 't [[Nazi-Duutsland|Derde Rijk]] en herneumd tot het [[Protectoraot Bohemen en Moravië]].
+* 14 - Met den hulpe van [[Adolf Hitler|Hitler]] reupen Slowaakse separatisten den onafhankelijkheid uut van [[Eersten Slowaokse Republiek|Slowakije]], dat 'n vazalstaot van [[Nazi-Duutsland]] wordt.
+* 15 - Duutse troepen bezetten [[Praog]]. Het overblievende [[Tsjechië|Tsjechische]] hartland wordt [[eannexeerd]] deur 't [[Nazi-Duutsland|Derde Rijk]] en herneumd tot het [[Protectoraot Bohemen en Moravië]].
 * 15 - Schriever en historikus [[Carles Rahola i Llorens]] wordt in [[Gerona (stad)|Girona]] efusilleerd deur de [[franquisme|franquisten]].
 * 22 - [[Litowwen]] staot 't [[Memelland]] af an [[Nazi-Duutsland]].
-* 23 - Nazi-Duutsland nemt 't [[Memelland]] in. Hitler gif veur den laotste keere een toespraok naor anlieding van een gebeedsuitbreiding zonder dat er een schot veur elost heufde te wod'n.
+* 23 - Nazi-Duutsland nemt 't Memelland in. Hitler gif veur den laotste keere een toespraok naor anlieding van een gebeedsuitbreiding zonder dat er een schot veur elost heufde te wod'n.
 
 ;april
 * 1 - Ende van den [[Spaonse Burgeroorlog]], den met hulp van [[Adolf Hitler|Hitler]] en [[Benito Mussolini|Mussolini]] ewonnen wordt deur den [[fascisme|fascistische]] generaal [[Francisco Franco|Franco]].
-* 2 - In België wod'n [[Belgische verkiezingen 1939|verkezingen]] eholden.
-* 7 - [[Itaolië]] annexeert [[Albanië]].
-* 26 - Den neeje [[soesoehoenan]] van [[Soerakarta (vorstenstaat)|Soerakarta]], [[Pakoeboewono XI van Soerakarta|Pakoeboewono XI]], wordt ekroond.
+* 2 - In België wod'n [[Belgische verkezingen 1939|verkezingen]] eholden.
+* 7 - [[Itaolië]] annexeert [[Albaonië]].
+* 26 - Den neeje [[soesoehoenan]] van [[Soerakarta (vorstenstaot)|Soerakarta]], [[Pakoeboewono XI van Soerakarta|Pakoeboewono XI]], wordt ekroond.
 
 ;mei
 * 3 - Den volkskommissaris van buutenlandse zaoken [[Maksim Litvinov|Litvinov]] van de [[Sovjet-Unie]] wordt plots vervangen deur [[Vjatsjeslav Molotov|Molotov]]. Hiermet wordt een totaole wending ineluud veur den buutenlandse politiek van Moskou.
-* 22 - Den Duutse en Italiaanse ministers van Buutenlandse Zaoken, [[Joachim von Ribbentrop]] en graof [[Galeazzo Ciano]], ondertekenen 't [[Staolpact]] in Berlijn.
+* 22 - Den Duutse en Italiaanse ministers van Buutenlandse Zaoken, [[Joachim von Ribbentrop]] en graof [[Galeazzo Ciano]], ondertekenen 't [[Staolpakt]] in Berlijn.
 
 ;juni
-* 18 - Den chef van de Duutse [[Abwehr]], admiraal [[Wilhelm Canaris|Canaris]], ontvangt een breef van de [[moefti]] van Jeruzalem, [[Amin al-Hoesseini]], waorin dissen de Duutsers bedankt veur den financiële ondersteuning, zonder welke hej den opstand neet zo lang had kunnen volholden.
+* 18 - Den chef van de Duutse [[Abwehr]], admiraal [[Wilhelm Canaris|Canaris]], ontvangt een breef van de [[moefti]] van [[Jeruzalem]], [[Amin al-Hoesseini]], waorin dissen de Duutsers bedankt veur den financiële ondersteuning, zonder welke hej den opstand neet zo lang had kunnen volholden.
 
 ;juli
-* 24 - 27 - De [[zygalski-bladen|Zygalski-blaoden]], die deur de [[Biuro Szyfrów|Poolse cryptologische dienst]] zunt ontwikkeld as hulpmiddel veur 't brekken van den [[Enigma (codeermachine)|Enigmacode]], wod'n op den Pools-Frans-Britse conferentie in Pyry, ten zuuden van Warschau, overedraogen aan den eallieerden. Hiernao wod'n ze verder ontwikkeld op [[Bletchley Park]].
-* 25 - Beëdiging viefde [[kabinet-Colijn V|kabinet-Colijn]], dat al twee daogen laoter deur den katholieken en socialisten in den Tweede Kamer wordt wegestemd.
+* 24 - 27 - De [[Zygalski-blaoden]], die deur de [[Biuro Szyfrów|Poolse kryptologische deenste]] zunt ontwikkeld as hulpmiddel veur 't brekken van de [[Enigma (kodeermachine)|Enigmakode]], wod'n op den Pools-Frans-Britse conferentie in Pyry, ten zuuden van [[Warschau]], overedraogen an den [[geallieerden]]. Hiernao wod'n ze verder ontwikkeld op [[Bletchley Park]].
+* 25 - Beëdiging viefde [[kabinet-Colijn V|kabinet-Colijn]], dat al twee daogen laoter deur den katholieken en socialisten in den [[Tweede Kamer]] wordt wegestemd.
 * 31 - In [[Artis]] wordt den eersten [[kinderboerderie]] van Nederlaand eopend. 
 
 ;augustus
 * 10 - Beëdiging tweede [[kabinet-De Geer II|kabinet-De Geer]], deur 'm zelf een extra-parlementair nood-kabinet enoemd.
-* 23 - Het [[Molotov-Ribbentroppact]] wordt in [[Moskou]] ondertekend tussen Nazi-Duutsland en den Sovjet-Unie.
-* 23 en 24 - Den Belgische koning [[Leopold III van België|Leopold III]] (mede naomens de Nederlandse koningin [[Wilhelmina der Nederlanden|Wilhelmina]], groothertogin [[Charlotte van Luxemburg]] en de Scandinavische vorsten), Amerikaanse president [[Franklin Delano Roosevelt]] en [[paus Pius XII]] stuuren breeven aan de Duutse en Poolse leiders waorin ze aandringen op een vreedzaome oplossing van hun conflicten.
-* 25 - Het [[Verenigd Koninkrijk]] en [[Polen]] sluiten een verdrag van wederzijdse bijstand.
+* 23 - Het [[Molotov-Ribbentroppakt]] wordt in [[Moskou]] ondertekend tussen [[Nazi-Duutsland]] en den [[Sovjet-Unie]].
+* 23 en 24 - Den Belgische koning [[Leopold III van België|Leopold III]] (mede naomens de Nederlandse koningin [[Wilhelmina der Nederlanden|Wilhelmina]], groothertogin [[Charlotte van Luxemburg]] en de Scandinavische vorsten), Amerikaanse president [[Franklin Delano Roosevelt]] en [[paus Pius XII]] stuuren breeven an de Duutse en Poolse leiders waorin zie andringen op een vreedzaome oplossing van hun conflicten.
+* 25 - Het [[Verenigd Koninkriek]] en [[Polen]] sluuten een verdrag van wederziedse bijstand.
 * 25 - [[Adolf Hitler]] gef opdracht tot een anval op [[Polen]] op [[26 augustus]]. Dissen wordt echter inetrokken naodat het Pools-Britse verdrag bekend wordt.
-* 28 - Den Nederlandse motortorpedoboot [[TM 51 (1939)|TM 51]] vaort tiedens een lange proefvaort naar Nederlaand om inbeslagnaome deur den Britse regering te voorkommen.
-* 31 - [[Operatie Himmler]]: [[Schutzstaffel|SS'ers]] in [[Polen|Poolse]] uniformen creëren een naogemaokte Poolse anval op 't raodiostation in [[Gleiwitz]]. Deze verzonnen anval wordt ebruukt as deel van den officiële aanlieding veur den anval op Polen.
+* 28 - Den Nederlandse motortorpedoboot [[TM 51 (1939)|TM 51]] vaort tiedens een lange proefvaort naar [[Nederlaand]] om inbeslagnaome deur den Britse regering te voorkommen.
+* 31 - [[Operaotie Himmler]]: [[Schutzstaffel|SS'ers]] in Poolse uniformen creëren een naogemaokte Poolse anval op 't raodiostation in [[Gleiwitz]]. Deze verzonnen anval wordt ebruukt as deel van den officiële aanlieding veur den anval op Polen.
 
 ;september
-* 1 - Invaosie van Duutse troepen in [[Polen]]. Dit wordt beschouwd as 't begin van den [[Tweede Wereldoorlog]].
-* 2 - In [[Stutthof]] buuten [[Gdańsk|Dantzig]] openen de nazi's een [[concentratiekamp]].
-* 2 - In de [[Citroën]]fabriek in [[Frankrijk]] rolt de eerste [[Citroën 2CV|2pk]] van de band. 
-* 3 - Oorlogsverklaring van het [[Verenigd Koninkrijk]] en [[Frankrijk]] aan [[Nazi-Duitsland|Duitsland]]. De Duits-Poolse oorlog wordt de [[Tweede Wereldoorlog]]. Zie ook [[Schemeroorlog]].
-* 3 - In België wordt een regering van Nationale Unie evormd, het [[Regering-Pierlot I|Kabinet Pierlot]].
-* 8 - De Nederlaandse mienenveger [[Hr.Ms. Willem van Ewijck (1937)|Hr.Ms. Willem van Ewijck]] loopt op een iegen mien waordeur 30 mensen om het leven kommen.
+* 1 - [[Invaosie]] van Duutse troepen in Polen. Dit wordt beschouwd as 't begin van den [[Tweede Wereldoorlog]].
+* 2 - In [[Stutthof]] buuten [[Gdańsk|Dantzig]] openen de nazi's een [[koncentratiekampe]].
+* 2 - In de [[Citroën]]fabriek in [[Frankriek]] rolt den eerste [[Citroën 2CV|2pk]] van de band. 
+* 3 - Oorlogsverklaoring van het [[Verenigd Koninkriek]] en [[Frankriek]] aan [[Nazi-Duutsland]]. De Duits-Poolse oorlog wordt de [[Tweede Wereldoorlog]]. Zie ook [[Schemeroorlog]].
+* 3 - In [[België]] wordt een regering van Nationale Unie evormd, het [[Regering-Pierlot I|Kabinet Pierlot]].
+* 8 - De Nederlaandse mienenveger [[Hr.Ms. Willem van Ewijck (1937)|Hr.Ms. Willem van Ewijck]] loopt op een iegen mien waordeur 30 mensen om 't lèven kommen.
 * 15 - Den [[Sovjet-Unie]] en [[Japan]] sluuten een waopenstilstand in hun oorlog aangaande de grens tussen [[Mongolië]] en [[Mantsjoekwo]].
 * 17 - Den [[Sovjet-Unie]] valt [[Polen]] binnen.
 
