--- a/1939.mw
+++ b/1939.mw
@@ -40,7 +40,7 @@
 * 10 - Beëdiging tweede [[kabinet-De Geer II|kabinet-De Geer]], deur 'm zelf een extra-parlementair nood-kabinet enoemd.
 * 23 - Het [[Molotov-Ribbentroppakt]] wordt in [[Moskou]] ondertekend tussen [[Nazi-Duutsland]] en den [[Sovjet-Unie]].
 * 23 en 24 - Den Belgische koning [[Leopold III van België|Leopold III]] (mede naomens de Nederlandse koningin [[Wilhelmina der Nederlanden|Wilhelmina]], groothertogin [[Charlotte van Luxemburg]] en de Scandinavische vorsten), Amerikaanse president [[Franklin Delano Roosevelt]] en [[paus Pius XII]] stuuren breeven an de Duutse en Poolse leiders waorin zie andringen op een vreedzaome oplossing van hun conflicten.
-* 25 - Het [[Verenigd Koninkriek]] en [[Polen]] sluuten een verdrag van wederziedse bijstand.
+* 25 - Het [[Verienigd Keuninkriek|Verenigd Keuninkriek]] en [[Polen]] sluuten een verdrag van wederziedse bijstand.
 * 25 - [[Adolf Hitler]] gef opdracht tot een anval op [[Polen]] op [[26 augustus]]. Dissen wordt echter inetrokken naodat het Pools-Britse verdrag bekend wordt.
 * 28 - Den Nederlandse motortorpedoboot [[TM 51 (1939)|TM 51]] vaort tiedens een lange proefvaort naar [[Nederlaand]] om inbeslagnaome deur den Britse regering te voorkommen.
 * 31 - [[Operaotie Himmler]]: [[Schutzstaffel|SS'ers]] in Poolse uniformen creëren een naogemaokte Poolse anval op 't raodiostation in [[Gleiwitz]]. Deze verzonnen anval wordt ebruukt as deel van den officiële aanlieding veur den anval op Polen.
@@ -49,7 +49,7 @@
 * 1 - [[Invaosie]] van Duutse troepen in Polen. Dit wordt beschouwd as 't begin van den [[Tweede Wereldoorlog]].
 * 2 - In [[Stutthof]] buuten [[Gdańsk|Dantzig]] openen de nazi's een [[koncentratiekampe]].
 * 2 - In de [[Citroën]]fabriek in [[Frankriek]] rolt den eerste [[Citroën 2CV|2pk]] van de band. 
-* 3 - Oorlogsverklaoring van het [[Verenigd Koninkriek]] en [[Frankriek]] aan [[Nazi-Duutsland]]. De Duits-Poolse oorlog wordt de [[Tweede Wereldoorlog]]. Zie ook [[Schemeroorlog]].
+* 3 - Oorlogsverklaoring van het [[Verienigd Keuninkriek|Verenigd Keuninkriek]] en [[Frankriek]] aan [[Nazi-Duutsland]]. De Duits-Poolse oorlog wordt de [[Tweede Wereldoorlog]]. Zie ook [[Schemeroorlog]].
 * 3 - In [[België]] wordt een regering van Nationale Unie evormd, het [[Regering-Pierlot I|Kabinet Pierlot]].
 * 8 - De Nederlaandse mienenveger [[Hr.Ms. Willem van Ewijck (1937)|Hr.Ms. Willem van Ewijck]] loopt op een iegen mien waordeur 30 mensen om 't lèven kommen.
 * 15 - Den [[Sovjet-Unie]] en [[Japan]] sluuten een waopenstilstand in hun oorlog aangaande de grens tussen [[Mongolië]] en [[Mantsjoekwo]].
